crates/cuda-device/tests/compile_fail/thread_index_row_major_tiles_not_domain1.stderr
error[E0277]: the trait bound `DisjointSlice<'static, u32, RowMajorTiles<2, 4, 16>>: cuda_device::__LaunchContractDisjointSlice<u32, 1>` is not satisfied
  --> tests/compile_fail/thread_index_row_major_tiles_not_domain1.rs:13:41
   |
13 |     requires_one_dimensional_contract::<TileOutput>();
   |                                         ^^^^^^^^^^ the trait `cuda_device::__LaunchContractDisjointSlice<u32, 1>` is not implemented for `DisjointSlice<'static, u32, RowMajorTiles<2, 4, 16>>`
   |
   = help: the following other types implement trait `cuda_device::__LaunchContractDisjointSlice<Element, DOMAIN>`:
             `DisjointSlice<'_, T, Index2D<ROW_STRIDE>>` implements `cuda_device::__LaunchContractDisjointSlice<T, 1>`
             `DisjointSlice<'_, T, Index2D<ROW_STRIDE>>` implements `cuda_device::__LaunchContractDisjointSlice<T, 2>`
             `DisjointSlice<'_, T, LinearTiles<N>>` implements `cuda_device::__LaunchContractDisjointSlice<T, 1>`
             `DisjointSlice<'_, T, RowMajorTiles<ROWS, COLS, ROW_STRIDE>>` implements `cuda_device::__LaunchContractDisjointSlice<T, 2>`
             `DisjointSlice<'_, T, Runtime2DIndex>` implements `cuda_device::__LaunchContractDisjointSlice<T, 1>`
             `DisjointSlice<'_, T, Runtime2DIndex>` implements `cuda_device::__LaunchContractDisjointSlice<T, 2>`
             `DisjointSlice<'_, T>` implements `cuda_device::__LaunchContractDisjointSlice<T, 1>`
note: required by a bound in `requires_one_dimensional_contract`
  --> tests/compile_fail/thread_index_row_major_tiles_not_domain1.rs:10:41
   |
10 | fn requires_one_dimensional_contract<T: __LaunchContractDisjointSlice<u32, 1>>() {}
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_one_dimensional_contract`
